# yo-mama

./: Cargo.toml  build.rs
src/: eastereggs.rs  lmao.rs  macros.rs  main.rs  record.rs  segments.rs
